# ray_tracing

./: CMakeLists.txt  TODO  compile_commands.json
include/: aabb.hpp  basic_types.hpp  bvh.hpp  camera.hpp  color.hpp  direction.hpp  hittable.hpp  hittable_list.hpp  image.hpp  material.hpp  pdf.h  photo_map.hpp  point.hpp  ppm_window.hpp  random_generator.hpp  ray.hpp  sphere.hpp  triangle.hpp  vector3d.hpp
src/: camera.cpp  color.cpp  direction.cpp  hittable_list.cpp  image.cpp  main.cpp  material.cpp  photo_map.cpp  point.cpp  random_generator.cpp  ray.cpp  sphere.cpp  triangle.cpp  vector3d.cpp
